--- a/app/src/main/res/layout/activity_second_page.xml
+++ b/app/src/main/res/layout/activity_second_page.xml
@@ -38,6 +38,7 @@
             android:layout_height="0dp"
             android:textSize="40sp"
             android:layout_weight="1"
+            android:onClick="subtraction"
             android:text="Subtraction" />
 
         <Button
