--- a/app/src/main/res/layout/activity_operator.xml
+++ b/app/src/main/res/layout/activity_operator.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Second_page">
+    tools:context=".setting.Operator">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:id="@+id/brainTrainer"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:text="Brain Trainer"
+            android:text="@string/brain_trainer"
             android:textColor="#fcd500"
             android:textSize="60dp"
             android:layout_weight="1"
@@ -30,7 +30,7 @@
             android:layout_weight="1"
             android:textSize="40sp"
             android:onClick="addition"
-            android:text="Addition" />
+            android:text="@string/addition" />
 
         <Button
             android:id="@+id/subButton"
@@ -39,7 +39,7 @@
             android:textSize="40sp"
             android:layout_weight="1"
             android:onClick="subtraction"
-            android:text="Subtraction" />
+            android:text="@string/subtraction" />
 
         <Button
             android:id="@+id/multiButton"
@@ -47,7 +47,7 @@
             android:layout_height="0dp"
             android:textSize="40sp"
             android:layout_weight="1"
-            android:text="Multiplication" />
+            android:text="@string/multiplication" />
 
         <Button
             android:id="@+id/divButton"
@@ -55,15 +55,19 @@
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textSize="40sp"
-            android:text="Division" />
+            android:text="@string/division" />
         <Button
             android:id="@+id/mixedButton"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:textSize="40sp"
-            android:text="Mixed Problem" />
+            android:text="@string/mixed_problem" />
+
+
+
 
 
     </LinearLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
