--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,39 +6,71 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
 
 
-        <ImageView
-            android:id="@+id/imageView3"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scaleType="centerCrop"
-            app:srcCompat="@drawable/frontpage" />
+
+<!--        <ImageView-->
+<!--            android:id="@+id/imageView3"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:scaleType="centerCrop"-->
+<!--            app:srcCompat="@drawable/frontpage" />-->
 
         <ImageView
             android:id="@+id/goImageButton"
-            android:layout_width="275dp"
-            android:layout_height="200dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginRight="10dp"
-            android:layout_marginBottom="-16dp"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_margin="10dp"
             android:onClick="goButton"
-            app:srcCompat="@drawable/go" />
+            app:srcCompat="@drawable/ic_baseline_play_circle_filled_24" />
 
-        <EditText
-            android:id="@+id/playerNameEditText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/goImageButton"
-            android:layout_centerHorizontal="true"
-            android:hint="Enter Your Name"
-            android:textColor="@android:color/holo_orange_dark"
-            android:textColorHint="@android:color/darker_gray"
-            android:textSize="40sp"
-            android:textStyle="bold" />
-    </RelativeLayout>
+
+
+
+            <TextView
+                android:id="@+id/welcomeText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+
+                android:text="Welcome "
+                app:layout_constraintBottom_toTopOf="@id/usernameText"
+                android:textSize="50sp"
+                android:textStyle="italic" />
+
+            <TextView
+                android:id="@+id/usernameText"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@id/goImageButton"
+                android:text="Username"
+
+                android:textSize="35sp"
+                android:textStyle="bold" />
+
+
+
+        <ImageView
+            android:id="@+id/settingIcon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_margin="10dp"
+            android:onClick="settingBtn"
+            app:srcCompat="@drawable/ic_baseline_settings_24" />
+
+
+
+        <ImageView
+            android:id="@+id/newUserLogin"
+            android:layout_margin="10dp"
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_baseline_face_24" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
