--- a/app/src/main/res/layout/activity_addition_.xml
+++ b/app/src/main/res/layout/activity_addition_.xml
@@ -29,7 +29,6 @@
             android:layout_alignParentTop="true"
             android:layout_toLeftOf="@+id/scoreTextView"
             android:layout_toRightOf="@+id/timerTextView"
-
             android:background="@android:color/darker_gray"
             android:text="@string/level"
             android:textAlignment="center"
@@ -48,7 +47,7 @@
             android:textSize="25sp"
             android:textStyle="bold" />
         <TextView
-            android:id="@+id/sumTextView"
+            android:id="@+id/questionTextView"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_below="@+id/levelTextView"
@@ -63,7 +62,7 @@
             android:id="@+id/gridLayoutView"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_below="@+id/sumTextView"
+            android:layout_below="@+id/questionTextView"
             >
 
             <Button
@@ -130,20 +129,32 @@
         <TextView
             android:id="@+id/resultTextView"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="250px"
             android:layout_below="@+id/gridLayoutView"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="10dp"
             android:text="@string/correct"
             android:textColor="#EC0808"
             android:textSize="25sp"
+            android:visibility="invisible"
             android:textStyle="italic" />
+
+        <ImageView
+            android:id="@+id/resultEmoji"
+            android:layout_width="250px"
+            android:layout_height="250px"
+            android:layout_centerHorizontal="true"
+            android:layout_margin="2dp"
+            android:layout_below="@id/gridLayoutView"
+            android:padding="1dp"
+            android:visibility="invisible"
+            />
 
         <Button
             android:id="@+id/playAgainButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/resultTextView"
+            android:layout_below="@+id/resultEmoji"
             android:layout_marginTop="10dp"
             android:layout_centerHorizontal="true"
             android:background="#FB1866"
@@ -151,6 +162,21 @@
             android:padding="5dp"
             android:text="@string/start"
             android:textAlignment="center"
+            android:textSize="20sp" />
+
+        <Button
+            android:id="@+id/skipButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/resultEmoji"
+            android:layout_marginTop="10dp"
+            android:layout_centerHorizontal="true"
+            android:background="#8067AE"
+            android:onClick="skipBtn"
+            android:padding="5dp"
+            android:text="@string/skip"
+            android:textAlignment="center"
+            android:visibility="invisible"
             android:textSize="20sp" />
 
 
@@ -167,8 +193,8 @@
                     android:padding="5dp"
                     android:text="@string/settings"
                     android:textAlignment="center"
+                android:visibility="invisible"
                     android:textSize="20sp" />
-
         <Button
                     android:id="@+id/mainMenuBtn"
                     android:layout_width="wrap_content"
@@ -182,6 +208,7 @@
                     android:onClick="mainMenuBtn"
                     android:padding="5dp"
                     android:text="@string/main_menu"
+            android:visibility="invisible"
                     android:textAlignment="center"
                     android:textSize="20sp" />
 
