--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -23,12 +23,17 @@
             android:textAlignment="center"
             android:textStyle="bold" />
 
-        <Button
-            android:id="@+id/stgLevel"
+
+        <TextView
+            android:id="@+id/settingText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Difficulties"
-            android:onClick="stgLevel"/>
+            android:text="@string/page_is_under_constructio"
+            android:textColor="@color/common_google_signin_btn_text_dark_default"
+            android:textSize="30sp"
+            android:layout_weight="1"
+            android:layout_marginLeft="10dp"
+            tools:ignore="HardcodedText" />
 
 
 
